# bearish-dot-fun

./: Anchor.toml  README.md  run-tests.sh
dump/accounts/: btc_usd_price_account.json  sol_usd_price_account.json
programs/bearish-dot-fun/: Cargo.toml
programs/bearish-dot-fun/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
programs/bearish-dot-fun/src/instructions/: claim_affiliate_winnings.rs  claim_user_winnings.rs  deposit.rs  deposit_and_withdraw.rs  initialize.rs  mod.rs  place_bet.rs  run_round.rs  set_affiliate.rs  set_platform_config.rs
programs/bearish-dot-fun/src/instructions/admin/: mod.rs  run_round.rs  set_platform_config.rs  transfer_ownership.rs  withdraw_platform_fees.rs
programs/bearish-dot-fun/src/state/: bet.rs  mod.rs  platform_config.rs  round.rs  user_deposit.rs  user_info.rs
tests/: bearish-dot-fun.ts  claimAffiliateWinnings.test.ts  claimUserWinningsPart1.test.ts  claimUserWinningsPart2.test.ts  claimUserWinningsPart3.test.ts  claimUserWinningsPart4.test.ts  deposit.test.ts  endRound.test.ts  endRoundPart1.test.ts  endRoundPart2.test.ts  endRoundPart3.test.ts  endRoundPart4.test.ts  initialization.test.ts  placeBet.test.ts  setAffiliate.test.ts  setPlatformConfig.test.ts  startRound.test.ts  transferOwnership.test.ts  withdraw.test.ts  withdrawPlatformFees.test.ts
tests/utils/: constants.ts  setup.ts  types.ts  utils.ts
